After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774585 - videotimecode: Fix incorrect nsec_since_daily_jam calculation
videotimecode: Fix incorrect nsec_since_daily_jam calculation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.10.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-16 18:27 UTC by Vivia Nikolaidou
Modified: 2016-11-24 11:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-videotimecode-Fix-incorrect-nsec_since_daily_jam-cal.patch (1.91 KB, patch)
2016-11-16 18:28 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2016-11-16 18:27:40 UTC
For drop-frame timecodes, the nsec_since_daily_jam doesn't necessarily
directly correspond to this many hours/minutes/seconds/frames. We have
to get the frame count as per frames_since_daily_jam and then convert.
Comment 1 Vivia Nikolaidou 2016-11-16 18:28:10 UTC
Created attachment 340051 [details] [review]
0001-videotimecode-Fix-incorrect-nsec_since_daily_jam-cal.patch
Comment 2 Sebastian Dröge (slomo) 2016-11-16 18:41:29 UTC
Comment on attachment 340051 [details] [review]
0001-videotimecode-Fix-incorrect-nsec_since_daily_jam-cal.patch

Makes sense but would be good (and simple) to have a test for this. The result should be off by 2 or 4 frames more each time a drop happens in drop-frame configuration.
Comment 3 Sebastian Dröge (slomo) 2016-11-17 08:18:01 UTC
commit 2c87618bf3962816e1ee6b932de3f98033cbde03
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Nov 17 10:16:43 2016 +0200

    videotimecode: Add test for the calculations of distance from the daily jam
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774585

commit f578c00a147876c8deff3c6af20200f90d041045
Author: Vivia Nikolaidou <vivia@ahiru.eu>
Date:   Wed Nov 16 19:13:14 2016 +0200

    videotimecode: Fix incorrect nsec_since_daily_jam calculation
    
    For drop-frame timecodes, the nsec_since_daily_jam doesn't necessarily
    directly correspond to this many hours/minutes/seconds/frames. We have
    to get the frame count as per frames_since_daily_jam and then convert.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774585